@@ -49,6 +49,7 @@ Flaviu Tamas (flaviut)
 Florian Baumann (derflob)
 fogine
 geo909
+GeorgeHJ
 granderil
 greye
 gtors
